RESOLVED FIXED269068
Fix build of HTMLDocumentParserFastPath with -Wreturn-std-move
https://bugs.webkit.org/show_bug.cgi?id=269068
Summary Fix build of HTMLDocumentParserFastPath with -Wreturn-std-move
Olivier Blin
Reported 2024-02-09 07:35:03 PST
Since 273516@main, clang debug builds on Linux fail on HTMLDocumentParserFastPath: /app/webkit/Source/WebCore/html/parser/HTMLDocumentParserFastPath.cpp:870:20: error: local variable 'element' will be copied despite being returned by name [-Werror,-Wreturn-std-move] return element; ^~~~~~~ /app/webkit/Source/WebCore/html/parser/HTMLDocumentParserFastPath.cpp:870:20: note: call 'std::move' explicitly to avoid copying return element; ^~~~~~~ std::move(element)
Attachments
Olivier Blin
Comment 1 2024-02-09 07:37:33 PST
EWS
Comment 2 2024-02-09 10:48:28 PST
Committed 274375@main (f0f21743a4a3): <https://commits.webkit.org/274375@main> Reviewed commits have been landed. Closing PR #24147 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-09 10:49:25 PST
Note You need to log in before you can comment on or make changes to this bug.