Fix build of HTMLDocumentParserFastPath with -Wreturn-std-move https://bugs.webkit.org/show_bug.cgi?id=269068

Reviewed by Chris Dumez.

clang debug builds on Linux failed since 273516@main (27f411a17a04).

* Source/WebCore/html/parser/HTMLDocumentParserFastPath.cpp:
(WebCore::HTMLFastPathParser::parseVoidElement):

Canonical link: https://commits.webkit.org/274375@main